Fix moving Clone layers as a part of group layer

Basically we just filter-out clone layers, whose source is already in
the list of processed layers. We do this filtering in two ways:

1) By simple filtering out m_nodes
2) By adding child clones into the blacklist, which is handled by the
   recursive function calls inside

Ref T2082
BUG:349077